--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,10 +32,10 @@ jobs:
           cache: true
 
       - name: Cache pub dependencies
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: |
-            ${{ env.HOME }}/.pub-cache
+            ~/.pub-cache
             **/.dart_tool
           key: ${{ runner.os }}-pub-${{ hashFiles('**/pubspec.lock') }}
           restore-keys: |
@@ -50,7 +50,7 @@ jobs:
       - name: Check formatting
         run: |
           echo "Checking code formatting..."
-          flutter format --set-exit-if-changed .
+          dart format --set-exit-if-changed .
 
       - name: Analyze project source
         run: |
